--- a/index.html
+++ b/index.html
@@ -3,35 +3,31 @@
 <head>
 <script type="text/javascript" src="qrc:///js/jquery.js"></script>
 <script type="text/javascript" src="qrc:///js/ign.js"></script>
-<style type="text/css">
-	body{
-	margin:0px;
-	padding:0px;
-	}
-
-	#header_wrapper{
-		width:100%;
-		height:100px;
-		background-color: #0A0B0C;
-	}
-
-	#header{
-		width:960px;
-		height:100px;
-		margin-left:auto;
-		margin-right:auto;
-	}
-</style>
-<script type="text/javascript">
-	$(document).ready(function(){
-
-	});
-</script>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div id="header_wrapper">
 		<div id="header">
 			<img src="images/logo.jpg">
+			<div id="judul">
+				<div id="judul_besar">Sistem Informasi Bebas Pustaka</div>
+				<div id="judul_kecil">Universitas Andalas</div>
+			</div>
+		</div>
+		<div id="content">
+			<label>Silahkan Masukkan NIM</label>
+			<form>
+				<input type="text" name="nim" id="nim" placeholder="NIM">
+				<input type="button" name="cari" value="Cari" id="cari">
+			</form>
+			<div id="pesan_merah">
+				Maaf, user dengan NIM <span id="nim_user"></span> masih memiliki tanggungan terhadap perpustakaan. Silahkan selesaikan tanggungannya terlebih dahulu <br> <h2>:(</h2>
+			</div>
+			<div id="pesan_hijau">
+				Selamat, anda user dengan NIM <span id="nim_user"></span> sudah bebas pustaka <br> <h2>:D</h2>
+					<input type="button" id="tombol_cetak" value="Cetak Surat Bebas">
+			</div>
 		</div>
 	</div>
 </body>
