--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				Maaf, user dengan NIM <span id="nim_user"></span> masih memiliki tanggungan terhadap perpustakaan. Silahkan selesaikan tanggungannya terlebih dahulu <br> <h2>:(</h2>
 			</div>
 			<div id="pesan_hijau">
-				Selamat, anda user dengan NIM <span id="nim_user"></span> sudah bebas pustaka <br> <h2>:D</h2>
+				Selamat, user dengan NIM <span id="nim_user_hijau"></span> sudah bebas pustaka <br> <h2>:D</h2>
 					<input type="button" id="tombol_cetak" value="Cetak Surat Bebas">
 			</div>
 		</div>
